--- a/report/ch/unaudited-micro.yaml
+++ b/report/ch/unaudited-micro.yaml
@@ -559,11 +559,11 @@ elements:
         attributes: { class: heading }
         content:
         - tag: div
-          content: 'expand:note:~[company-name]'
+          content: 'expand:~[company-name]'
         - tag: div
           content: Statement of financial position
         - tag: div
-          content: 'expand:note:As at ~[balance-sheet-date]'
+          content: 'expand:As at ~[balance-sheet-date]'
         - tag: hr
       - worksheet: balance-sheet
       - element: balance-sheet-notes
@@ -578,22 +578,22 @@ elements:
       content: 
       # Some boilerplate notes...
       # ...prepared in accordance with the micro-entity provisions...
-      - expand:micro-entity-provisions
+      - template:micro-entity-provisions
 
     - tag: p
       content: 
       # ...the company was entitled to exemption from audit..
-      - expand:small-company-audit-exempt
+      - template:small-company-audit-exempt
 
     - tag: p
       content: 
       # ...members have not required the company to obtain an audit..
-      - expand:no-audit-required
+      - template:no-audit-required
 
     - tag: p
       content: 
       # ...directors acknowledge their responsibilities for complying with...
-      - expand:directors-acknowledge
+      - template:directors-acknowledge
 
 # Profit and loss
 - id: profit-and-loss
@@ -623,7 +623,7 @@ elements:
       content:
       - tag: div
         attributes: { class: company-number }
-        content: 'expand:note:
+        content: 'expand:
           Company registration no. ~[company-number] (~[jurisdiction])'
       - tag: img
         attributes:
@@ -631,13 +631,13 @@ elements:
           alt: Company logo
       - tag: div
         attributes: { class: company-name }
-        content: 'expand:note:~[company-name]'
+        content: 'expand:~[company-name]'
       - tag: div
         attributes: { class: title }
-        content: expand:note:~[report-title]
+        content: expand:~[report-title]
       - tag: div
         attributes: { class: subtitle }
-        content: 'expand:note:For the year ended ~[period-end]'
+        content: 'expand:For the year ended ~[period-end]'
 
 - id: company-info
   kind: page
@@ -650,11 +650,11 @@ elements:
         attributes: { class: heading }
         content:
         - tag: div
-          content: 'expand:note:~[company-name]'
+          content: 'expand:~[company-name]'
         - tag: div
           content: Company information
         - tag: div
-          content: 'expand:note:For the year ended ~[period-end]'
+          content: 'expand:For the year ended ~[period-end]'
         - tag: hr
       - tag: table
         attributes:
@@ -666,17 +666,17 @@ elements:
             content: Directors
           - tag: td
             content:
-            - 'expand:note:~[officer1]'
+            - 'expand:~[officer1]'
             - tag: br
-            - 'expand:note:~[officer2]'
+            - 'expand:~[officer2]'
             - tag: br
-            - 'expand:note:~[officer3]'
+            - 'expand:~[officer3]'
         - tag: tr
           content:
           - tag: td
             content: Company number
           - tag: td
-            content: 'expand:note:
+            content: 'expand:
             ~[company-number], registered in ~[jurisdiction]'
         - tag: tr
           content:
@@ -684,13 +684,13 @@ elements:
             content: Registered office
           - tag: td
             content:
-            - 'expand:note:~[contact-address1::, ]'
+            - 'expand:~[contact-address1::, ]'
             - tag: br
               content: []
-            - 'expand:note:~[contact-address2::, ]'
+            - 'expand:~[contact-address2::, ]'
             - tag: br
               content: []
-            - 'expand:note:~[contact-location::, ] ~[contact-postcode]'
+            - 'expand:~[contact-location::, ] ~[contact-postcode]'
 
 - id: signature
   kind: html
@@ -698,10 +698,10 @@ elements:
     tag: div
     content:
     - tag: p
-      content: 'expand:note:Approved by the board of directors and
+      content: 'expand:Approved by the board of directors and
         authorised for publication on ~[authorised-date].'
     - tag: p
-      content: 'expand:note:Signed on behalf of the board, by
+      content: 'expand:Signed on behalf of the board, by
         ~[signers-name].'
     - tag: img
       attributes:
@@ -719,12 +719,12 @@ elements:
         attributes: { class: heading }
         content:
         - tag: div
-          content: 'expand:note:~[company-name]'
+          content: 'expand:~[company-name]'
         - tag: div
           content: Notes to the accounts
         - tag: div
           attributes: { class: subtitle }
-          content: 'expand:note:For the year ended ~[period-end]'
+          content: 'expand:For the year ended ~[period-end]'
         - tag: hr
   - kind: notes
     notes:
@@ -732,11 +732,7 @@ elements:
     # Some boilerplate notes...
 
     # Company number and address.
-    - company
-
-    # These accounts were generated using gnucash-ixbrl...  You don't need
-    # to have this one in your report.
-    - software-version
+    - template:company
 
 - id: revision-info
   kind: page
@@ -749,12 +745,12 @@ elements:
         attributes: { class: heading }
         content:
         - tag: div
-          content: 'expand:note:~[company-name]'
+          content: 'expand:~[company-name]'
         - tag: div
           content: Revision of the financial statements
         - tag: div
           attributes: { class: subtitle }
-          content: 'expand:note:For the year ended ~[period-end]'
+          content: 'expand:For the year ended ~[period-end]'
         - tag: hr
   - kind: html
     root: //import supplementary-note.yaml
